# Parallel-Performance-Testing

./: .bash_history  .bashrc  .cshrc  .idevrc  .login  .profile  .viminfo  a.out  hw0.cpp
.slurm/: idv01736.o3093430  idv03016.o3093611  idv06374.o3256777  idv09581.o3093842  idv16209.o3177219  idv19361.o3103367  idv20880.o3258405  idv26524.o3018179  idv31319.o3175700  idv32568.o3257815  idv33232.o3173564  idv38776.o3262699  idv40067.o3171526  idv41124.o3094227  idv41664.o3175727  idv43138.o2949831  idv43664.o3257058  idv44460.o3258096  idv45238.o3166604  idv47471.o3163059  idv47510.o3093347  idv47708.o3177075  idv50563.o3164510  idv51161.o3166444  idv55202.o3093761  idv55671.o3176922  idv56467.o3093101  idv60349.o3164964  idv61431.o3094424  idv62571.o3165395  idv63071.o3177120  idv67730.o3175910  idv68858.o3121504  idv71472.o3094300  idv73556.o3163199  idv79095.o3163210  idv79287.o3175976  idv80637.o2969505  idv82325.o3094009  idv83278.o3094012  (+7 more)
.ssh/: id_rsa  id_rsa.pub  known_hosts
UsingMPI/: Makefile.in  README  configure  configure.in
UsingMPI/advanced/: Makefile.in  ic_nxtval.c  ic_nxtval_create1.c  ic_nxtval_free.c  nxtval.c  nxtval_create.c  nxtval_free.c
UsingMPI/advanced/f90/: Makefile.in  matvec-test.f90  matvec.f90
UsingMPI/advmsg/: Makefile.in
UsingMPI/libraries/: Makefile.in  ibcast-test.c  ibcast.c
UsingMPI/simplempi/: Makefile.in  matmat.f  matmatlog.f  matvec.f
UsingMPI/simplempi/f90/: Makefile.in  matmat.f90  matmatlog.f90  matvec.f90  pi3.f90  pit.f90
hw0/: hw0.cpp
hw1/: README.md
hw1/part1/: README.md  a.out  assignment1.sh  compile  (+6 more)
(+20 files in other folders)
